deploy/gitops/catalog/database/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: polaris-postgresql
  namespace: shirokuma-dev
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: polaris-postgresql
      app.kubernetes.io/component: catalog-metadata
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app.kubernetes.io/component
                operator: In
                values:
                  - catalog-bootstrap
                  - catalog-server
      ports:
        - port: 5432
          protocol: TCP
  egress: []
